[B]Version 2.1.6 - 2012-04-25[/B]
- Updated URLs for some TV2/Regions (by request from Fynske Medier)

[B]Version 2.1.5 - 2012-04-13[/B]
- Always play channels via playChannel(..)

[B]Version 2.1.4 - 2012-04-12[/B]
- Added Kanal Sport
- Use script.module.buggalo for error reporting

[B]Version 2.1.3 - 2012-03-16[/B]
- Updated DR's streaming urls
- Removed 24Nordjyske (they switched to Silverlight Smooth Streaming)

[B]Version 2.1.2 - 2012-02-05[/B]
- Avoid problem with missing settings
- Fixed use of secondary streams from external addons (fx TV Guide)

[B]Version 2.1.1 - 2012-01-30[/B]
- Fixed DR HD high-quality stream
- Added TV2/Bornholm and TV/MIDT-VEST

[B]Version 2.1.0 - 2012-01-13[/B]
- Updated TV2/Regionerne with the changes after January, 11th
- Added danskespil.dk Lotto
- Added secondary streams for DRs channel
- Show warning if not in Denmark

[B]Version 2.0.4 - 2011-12-04[/B]
- Added more of the TV2/Regions channels and Folketinget TV
- Added setting to group channels
- Fix playback of channels from XBMC favourites

[B]Version 2.0.3 - 2011-10-03[/B]
- Fixed problem with old settings
- Added TV2 Nord and TV2 NordPlus streams as a test,
  they only work when they are broadcasting

[B]Version 2.0.2 - 2011-09-27[/B]
- Added [I]Best[/I] quality to play streams at best quality available
- Changed [I]High[/I] quality to play streams at 1 mbit/s useful for ATV1 users, etc.

[B]Version 2.0.1 - 2011-09-20[/B]
- Added DR HD
- New graphics

[B]Version 2.0.0 - 2011-08-12[/B]
- Added support for XBMC Eden
- otherwise same features as 1.3.0 below.

[B]Version 1.3.0 - 2011-08-12[/B]
- Removed dependency on script.module.danishaddons
- Removed Folketinget as stream was broken

[B]Version 1.2.3[/B]
- Removed all usages of os.getcwd()

[B]Version 1.2.2[/B]
- Prepare for official repository

[B]Version 1.2.1[/B]
- Updated to danishaddons module 1.1.0

[B]Version 1.2.0[/B]
- Made it possible to set quality of streams, eg. high, medium, low